k8s/devops-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-demo
spec:
  selector:
    matchLabels:
      app: devops-demo
  replicas: 3
  template:
    metadata:
      labels:
        app: devops-demo
    spec:
      volumes:
        - name: shared-files
          emptyDir: {}
        - name: nginx-config-volume
          configMap:
            name: nginx-config
      containers:
        - name: devops-demo-php
          image: devops-demo:1.3
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-files
              mountPath: /shared
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r /var/www/devops-demo/. /shared"]
        - name: devops-demo-nginx
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/devops-demo
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
