k8s/devops-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-service
  labels:
    app: devops-demo-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: devops-demo
