k8s/devops-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - devops-demo.local
      secretName: selfsigned-cert-tls
  rules:
  - host: devops-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-demo-service
            port:
              number: 80
